# python-jay

./: README.md  pyproject.toml
jay/: __main__.py  jay.py
